--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "nodemon src/main"
+    "dev": "nodemon src/server"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/TahaDgn/course-app-api#readme",
   "devDependencies": {
+    "express": "^4.17.1",
     "nodemon": "^2.0.7"
   }
 }
