demo is deprecated for the main project will be developed.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "course-app-api",
   "version": "1.0.0",
   "description": "node course app backend api project",
-  "main": "main.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server"
