--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "course-app-api",
   "version": "1.0.0",
-  "description": "node course app backend api project",
+  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server"
+    "start": "NODE_ENV=production node server",
+    "dev" : "nodemon ./src/server"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/TahaDgn/course-app-api#readme",
   "devDependencies": {
-    "express": "^4.17.1",
     "nodemon": "^2.0.7"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
   }
 }
