--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
-PORT=5001
+PORT=
 
 MONGO_URI =
 
@@ -8,3 +8,6 @@ GEOCODER_API_KEY=
 
 FILE_UPLOAD_PATH=../public/uploads
 MAX_FILE_UPLOAD=
+
+JWT_SECRET=
+JWT_EXPIRE=
