--- a/sample.env
+++ b/sample.env
@@ -12,3 +12,10 @@ MAX_FILE_UPLOAD=
 JWT_SECRET=
 JWT_EXPIRE=30d
 JWT_COOKIE_EXPIRE=30
+
+SMTP_HOST=
+SMTP_PORT=
+SMTP_EMAIL=
+SMTP_PASSWORD=
+FROM_EMAIL=
+FROM_NAME=
