--- a/sample.env
+++ b/sample.env
@@ -19,3 +19,5 @@ SMTP_EMAIL=
 SMTP_PASSWORD=
 FROM_EMAIL=
 FROM_NAME=
+
+CORS_WHITELIST=http://localhost:8080 https://localhost8081 http://localhost:5000 https://localhost:5001
